ecs is dirty cache system : half assed flag wip

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,20 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
+    "from pygame.event import Event\n",
     "from pygame.math import Vector2\n",
     "from typing import NamedTuple, Tuple, List, Callable, Optional\n",
     "import os\n",
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,11 +180,6 @@
     "\n",
     "\n",
     "class Asteroid(ComponentABC):\n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "class UI_Element(ComponentABC):\n",
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
@@ -265,48 +252,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Is Dirty Manager**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "\n",
-    "class IsSystemDirtyManager:\n",
-    "    \"\"\"Class that manages flags for if a System Is Dirty\"\"\"\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        # if is dirty, EVERY SystemABC class will RE-GATHER all entities\n",
-    "        # - adding or deleting components will set this to True\n",
-    "        # - @ END OF FRAME, and set to False, presumably because a system has\n",
-    "        # already gathered all entities by END OF FRAME\n",
-    "        # - EndFrameTickSystem(SystemABC) will set this to False\n",
-    "        # @audit 🛑 : Verify that this is a good idea lol ^\n",
-    "        self.is_dirty_flags = defaultdict(lambda: True)\n",
-    "\n",
-    "    def set_dirty(self, system_name: str) -> None:\n",
-    "        \"\"\"Set a system to dirty\"\"\"\n",
-    "        self.is_dirty_flags[system_name] = True\n",
-    "\n",
-    "    def clear_dirty(self, system_name: str) -> None:\n",
-    "        \"\"\"Clear a system to dirty\"\"\"\n",
-    "        self.is_dirty_flags[system_name] = False\n",
-    "\n",
-    "    def is_dirty(self, system_name: str) -> bool:\n",
-    "        \"\"\"Check if a system is dirty\"\"\"\n",
-    "        return self.is_dirty_flags[system_name]\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##### **Component Manager**\n",
     "- `add`\n",
     "- `remove`\n",
@@ -316,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +303,7 @@
     "\n",
     "\n",
     "# Implement a simple ComponentManager class that manages a dictionary of components\n",
-    "class ComponentManager(ComponentManagerABC, IsSystemDirtyManager):\n",
+    "class ComponentManager(ComponentManagerABC):\n",
     "    def __init__(self):\n",
     "        # With a `defaultdict`, you can directly add a component without first\n",
     "        # checking if the `entity.id` exists in `self.components`.\n",
@@ -445,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,6 +615,16 @@
     "        )\n",
     "        print(f\"[entities] Initial gathering for {self.__class__.__name__}\")\n",
     "\n",
+    "    def update(self, **kwargs) -> None:\n",
+    "        \"\"\"Update the system with the given component manager\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    def set_dirty(self) -> None:\n",
+    "        print(f\"[entities] on_dirty regathering for {self.__class__.__name__}\")\n",
+    "        self.entities = EntitySystemABC.try_gather_all_entities(\n",
+    "            self._c_manager, self._components\n",
+    "        )\n",
+    "\n",
     "    @staticmethod\n",
     "    def try_gather_all_entities(\n",
     "        c_manager: ComponentManager, components: Optional[List[Type[ComponentABC]]]\n",
@@ -682,17 +637,7 @@
     "            return entities\n",
     "        else:\n",
     "            entities = c_manager.get_entities_with_all_components(components)\n",
-    "        return entities\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def update(self, **kwargs) -> None:\n",
-    "        \"\"\"Update the system with the given component manager\"\"\"\n",
-    "        # check if we need to regather entities\n",
-    "        if self.entities is None:\n",
-    "            print(f\"[entities] Regathering for {self.__class__.__name__}\")\n",
-    "            self.entities = EntitySystemABC.try_gather_all_entities(\n",
-    "                self._c_manager, self._components\n",
-    "            )\n"
+    "        return entities\n"
    ]
   },
   {
@@ -705,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,12 +855,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### **EntityComponentSystemManager**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from abc import ABC\n",
+    "\n",
+    "class EntityComponentSystemManager(ComponentManager):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.systems = self._gather_systems()\n",
+    "\n",
+    "    def _gather_systems(self)->List[EntitySystemABC]:\n",
+    "        systems_inherited = EntitySystemABC.__subclasses__()\n",
+    "        return [system(self) for system in systems_inherited]\n",
+    "\n",
+    "    def _set_dirty(self):\n",
+    "        for system in self.systems:\n",
+    "            system.set_dirty()\n",
+    "\n",
+    "    def remove_component(self, entity, component_type: Type) -> None:\n",
+    "        super().remove_component(entity, component_type)\n",
+    "        self._set_dirty()\n",
+    "\n",
+    "    def add_component(self, entity, component) -> None:\n",
+    "        super().add_component(entity, component)\n",
+    "        self._set_dirty()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### **UI and Text Blit**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -993,6 +977,51 @@
     }
    ],
    "source": [
+    "def debug_player_rotation(c_manager: ComponentManager) -> Optional[Rotation]:\n",
+    "    \"\"\"Debug player rotation\"\"\"\n",
+    "    player_entities = c_manager.get_entities_with_all_components(\n",
+    "        [Shape, Input, Rotation]\n",
+    "    )\n",
+    "    if player_entities:\n",
+    "        player_rotation = c_manager.get_component(player_entities[0], Rotation)\n",
+    "    else:\n",
+    "        player_rotation = None\n",
+    "\n",
+    "    return player_rotation\n",
+    "\n",
+    "\n",
+    "def handle_events(\n",
+    "    frame_events: List[Event],\n",
+    "    input_system: InputSystem,\n",
+    "    is_super_hot: bool,\n",
+    "    c_manager: ComponentManager,\n",
+    ") -> bool:\n",
+    "    for event in frame_events:\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            on_exit()\n",
+    "        elif event.type == pygame.KEYUP:\n",
+    "            if event.key == pygame.K_ESCAPE:\n",
+    "                on_exit()\n",
+    "            elif event.key == pygame.K_SPACE:\n",
+    "                is_super_hot = not is_super_hot\n",
+    "            elif event.key == pygame.K_j:\n",
+    "                # delete an asteroid\n",
+    "                entities = c_manager.get_entities_with_all_components([Asteroid])\n",
+    "                if entities:\n",
+    "                    print(f\"Deleting Asteroid {entities[0]}\")\n",
+    "                    c_manager.remove_component(entities[0], Asteroid)\n",
+    "        # check if the event a keyboard or mouse event\n",
+    "        if event.type in (\n",
+    "            pygame.KEYDOWN,\n",
+    "            pygame.KEYUP,\n",
+    "            pygame.MOUSEBUTTONDOWN,\n",
+    "            pygame.MOUSEBUTTONUP,  # pygame.MOUSEMOTION\n",
+    "        ):\n",
+    "            # Update input system\n",
+    "            input_system.update(event=event)\n",
+    "    return is_super_hot\n",
+    "\n",
+    "\n",
     "def main() -> None:\n",
     "    # [INIT] - systems, context and COMPONENT managers\n",
     "    context_sys = on_awake()\n",
@@ -1031,13 +1060,7 @@
     "    text_blit_system_debug_player_rotation = TextBlitSystem(\n",
     "        context_sys.screen, (280, 410)\n",
     "    )\n",
-    "    player_entities = c_manager.get_entities_with_all_components(\n",
-    "        [Shape, Input, Rotation]\n",
-    "    )\n",
-    "    if player_entities is not None and len(player_entities) > 0:\n",
-    "        player_rotation = c_manager.get_component(player_entities[0], Rotation)\n",
-    "    else:\n",
-    "        player_rotation = None\n",
+    "    debug_rotation = debug_player_rotation(c_manager)\n",
     "    \"\"\"DEBUG\"\"\"\n",
     "\n",
     "    # Main game loop\n",
@@ -1045,27 +1068,14 @@
     "        try:\n",
     "            # Event Handling\n",
     "            frame_events = pygame.event.get()\n",
-    "            # if super hot = True only update tick when there's an event\n",
     "            if is_super_hot:\n",
+    "                # if is_super_hot == True, only update tick if on frame event\n",
     "                if len(frame_events) == 0:\n",
     "                    continue\n",
-    "            for event in frame_events:\n",
-    "                if event.type == pygame.QUIT:\n",
-    "                    on_exit()\n",
-    "                elif event.type == pygame.KEYUP:\n",
-    "                    if event.key == pygame.K_ESCAPE:\n",
-    "                        on_exit()\n",
-    "                    elif event.key == pygame.K_SPACE:\n",
-    "                        is_super_hot = not is_super_hot\n",
-    "                # check if the event a keyboard or mouse event\n",
-    "                if event.type in (\n",
-    "                    pygame.KEYDOWN,\n",
-    "                    pygame.KEYUP,\n",
-    "                    pygame.MOUSEBUTTONDOWN,\n",
-    "                    pygame.MOUSEBUTTONUP,  # pygame.MOUSEMOTION\n",
-    "                ):\n",
-    "                    # Update input system\n",
-    "                    input_system.update(event=event)\n",
+    "            is_super_hot = handle_events(\n",
+    "                frame_events, input_system, is_super_hot, c_manager\n",
+    "            )\n",
+    "            text_blit_system_event.update(message=f\"Event: {frame_events}\")\n",
     "            # Update positions\n",
     "            positioning_system.update()\n",
     "            # Update rotation\n",
@@ -1075,13 +1085,12 @@
     "            # Draw shapes\n",
     "            shape_draw_system.update()\n",
     "            # Blit text\n",
-    "            text_blit_system_event.update(message=f\"Event: {frame_events}\")\n",
     "            text_blit_system_fps.update(\n",
     "                message=f\"FPS: {context_sys.clock.get_fps():.2f}\"\n",
     "            )\n",
-    "            if player_rotation is not None:\n",
+    "            if debug_rotation is not None:\n",
     "                text_blit_system_debug_player_rotation.update(\n",
-    "                    message=f\"Player rotation: {player_rotation.angle:.2f}\",\n",
+    "                    message=f\"Player rotation: {debug_rotation.angle:.2f}\",\n",
     "                )\n",
     "            # Update display\n",
     "            pygame.display.update()\n",
@@ -1109,6 +1118,130 @@
    "source": [
     "#### -- [FOOTNOTES] --\n",
     "***"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In an **`entity component system`**, where system caches entities on init suggest  \n",
+    "approaches to handle when the system **`cache is dirty`**\n",
+    "***\n",
+    "In an Entity Component System (ECS) architecture, systems cache entities during  \n",
+    "initialization, and sometimes the cache may become \"dirty\" when the state of  \n",
+    "entities or components changes during runtime. To handle such cases, you can use  \n",
+    "one of the following approaches:\n",
+    "\n",
+    "1. **Flag-based approach**: Introduce a flag in the system that marks the cache  \n",
+    "as dirty. Whenever an entity or component is added, removed, or updated, set the  \n",
+    "dirty flag. In the system's update loop, check if the cache is dirty, and if so,  \n",
+    "update the cache before processing the entities.\n",
+    "\n",
+    "```python\n",
+    "class ExampleSystem(EntitySystemABC):\n",
+    "    def __init__(self, c_manager):\n",
+    "        super().__init__(c_manager)\n",
+    "        self.cache_dirty = True\n",
+    "        self.entity_cache = []\n",
+    "\n",
+    "    def update(self):\n",
+    "        if self.cache_dirty:\n",
+    "            self.update_cache()\n",
+    "            self.cache_dirty = False\n",
+    "\n",
+    "        # process entities in cache\n",
+    "\n",
+    "    def update_cache(self):\n",
+    "        # update entity_cache with the latest data\n",
+    "        pass\n",
+    "\n",
+    "    def on_entity_added(self, entity):\n",
+    "        self.cache_dirty = True\n",
+    "\n",
+    "    def on_entity_removed(self, entity):\n",
+    "        self.cache_dirty = True\n",
+    "\n",
+    "    def on_component_updated(self, entity, component):\n",
+    "        self.cache_dirty = True\n",
+    "```\n",
+    "\n",
+    "2. **Observer pattern**: Implement an observer pattern where systems subscribe  \n",
+    "to specific events related to entity and component changes. When such an event  \n",
+    "occurs, the corresponding system updates its cache accordingly.\n",
+    "\n",
+    "```python\n",
+    "class ExampleSystem(EntitySystemABC):\n",
+    "    def __init__(self, c_manager):\n",
+    "        super().__init__(c_manager)\n",
+    "        self.entity_cache = []\n",
+    "\n",
+    "        # Subscribe to events\n",
+    "        c_manager.subscribe(\"entity_added\", self.on_entity_added)\n",
+    "        c_manager.subscribe(\"entity_removed\", self.on_entity_removed)\n",
+    "        c_manager.subscribe(\"component_updated\", self.on_component_updated)\n",
+    "\n",
+    "    def update(self):\n",
+    "        # process entities in cache\n",
+    "\n",
+    "    def on_entity_added(self, entity):\n",
+    "        # update entity_cache with the new entity\n",
+    "        pass\n",
+    "\n",
+    "    def on_entity_removed(self, entity):\n",
+    "        # remove the entity from entity_cache\n",
+    "        pass\n",
+    "\n",
+    "    def on_component_updated(self, entity, component):\n",
+    "        # update the entity_cache if necessary\n",
+    "        pass\n",
+    "```\n",
+    "\n",
+    "3. **Partial cache updates**: Instead of updating the entire cache, track added,  \n",
+    "removed, or updated entities and components separately. Update the cache only  \n",
+    "for the affected entities when processing. This approach is more efficient for  \n",
+    "systems that handle a large number of entities.\n",
+    "\n",
+    "```python\n",
+    "class ExampleSystem(EntitySystemABC):\n",
+    "    def __init__(self, c_manager):\n",
+    "        super().__init__(c_manager)\n",
+    "        self.entity_cache = []\n",
+    "        self.added_entities = set()\n",
+    "        self.removed_entities = set()\n",
+    "        self.updated_entities = set()\n",
+    "\n",
+    "    def update(self):\n",
+    "        # process added, removed, and updated entities\n",
+    "        self.process_added_entities()\n",
+    "        self.process_removed_entities()\n",
+    "        self.process_updated_entities()\n",
+    "\n",
+    "        # process remaining entities in cache\n",
+    "\n",
+    "    def process_added_entities(self):\n",
+    "        # Process added entities and update entity_cache\n",
+    "        pass\n",
+    "\n",
+    "    def process_removed_entities(self):\n",
+    "        # Process removed entities and update entity_cache\n",
+    "        pass\n",
+    "\n",
+    "    def process_updated_entities(self):\n",
+    "        # Process updated entities and update entity_cache if necessary\n",
+    "        pass\n",
+    "\n",
+    "    def on_entity_added(self, entity):\n",
+    "        self.added_entities.add(entity)\n",
+    "\n",
+    "    def on_entity_removed(self, entity):\n",
+    "        self.removed_entities.add(entity)\n",
+    "\n",
+    "    def on_component_updated(self, entity, component):\n",
+    "        self.updated_entities.add(entity)\n",
+    "```\n",
+    "\n",
+    "Choose the approach that best fits your use case and performance requirements."
    ]
   },
   {
