Footnote on rx and ecs approaches to dirty

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "from pygame.event import Event\n",
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,8 +969,43 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Debug Log**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def debug_player_rotation(c_manager: ComponentManager) -> Optional[Rotation]:\n",
+    "    \"\"\"Debug player rotation\"\"\"\n",
+    "    player_entities = c_manager.get_entities_with_all_components(\n",
+    "        [Shape, Input, Rotation]\n",
+    "    )\n",
+    "    if player_entities:\n",
+    "        player_rotation = c_manager.get_component(player_entities[0], Rotation)\n",
+    "    else:\n",
+    "        player_rotation = None\n",
+    "\n",
+    "    return player_rotation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Main**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -977,18 +1021,6 @@
     }
    ],
    "source": [
-    "def debug_player_rotation(c_manager: ComponentManager) -> Optional[Rotation]:\n",
-    "    \"\"\"Debug player rotation\"\"\"\n",
-    "    player_entities = c_manager.get_entities_with_all_components(\n",
-    "        [Shape, Input, Rotation]\n",
-    "    )\n",
-    "    if player_entities:\n",
-    "        player_rotation = c_manager.get_component(player_entities[0], Rotation)\n",
-    "    else:\n",
-    "        player_rotation = None\n",
-    "\n",
-    "    return player_rotation\n",
-    "\n",
     "\n",
     "def handle_events(\n",
     "    frame_events: List[Event],\n",
@@ -1118,6 +1150,151 @@
    "source": [
     "#### -- [FOOTNOTES] --\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Rx\n",
+      "Version: 3.2.0\n",
+      "Summary: Reactive Extensions (Rx) for Python\n",
+      "Home-page: http://reactivex.io\n",
+      "Author: Dag Brattli\n",
+      "Author-email: dag@brattli.net\n",
+      "License: MIT License\n",
+      "Location: /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages\n",
+      "Requires: \n",
+      "Required-by: \n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip show rx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: rx in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (3.2.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install rx"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reactive Python Examples\n",
+    "***\n",
+    "\n",
+    "Python has a ReactiveX (Rx) library called `RxPY`. ReactiveX is a cross-platform  \n",
+    "library for programming with asynchronous data streams and reactive programming.  \n",
+    "RxPY is an implementation of the ReactiveX API for Python. It allows you to  \n",
+    "build event-driven and asynchronous applications using observable sequences and  \n",
+    "LINQ-style query operators.\n",
+    "\n",
+    "To use RxPY, you need to install it first. You can do this using pip:\n",
+    "\n",
+    "```bash\n",
+    "pip install rx\n",
+    "```\n",
+    "\n",
+    "Once installed, you can use the library in your Python code. Here is a basic example:\n",
+    "\n",
+    "```python\n",
+    "import rx\n",
+    "from rx import operators as ops\n",
+    "\n",
+    "# Create an observable sequence\n",
+    "observable = rx.from_iterable([1, 2, 3, 4, 5])\n",
+    "\n",
+    "# Apply a filter and a map operator to the sequence\n",
+    "filtered_mapped = observable.pipe(\n",
+    "    ops.filter(lambda x: x % 2 == 0),\n",
+    "    ops.map(lambda x: x * 2)\n",
+    ")\n",
+    "\n",
+    "# Subscribe to the observable and print the results\n",
+    "filtered_mapped.subscribe(lambda x: print(f\"Received: {x}\"))\n",
+    "```\n",
+    "\n",
+    "In this example, we create an observable sequence from an iterable  \n",
+    "(a list of integers). We then apply a filter to keep only even numbers and a  \n",
+    "map to double the values. Finally, we subscribe to the observable and print the  \n",
+    "received values.\n",
+    "\n",
+    "You can find more information and examples in the :  \n",
+    "- [RxPY GitHub repository](https://github.com/ReactiveX/RxPY)  \n",
+    "- [official ReactiveX documentation](http://reactivex.io/intro.html)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reactive Programming Notes\n",
+    "***\n",
+    "Reactive programming in Python, using libraries like RxPY, can be very useful  \n",
+    "for a variety of use cases. It provides an elegant and efficient way to handle  \n",
+    "asynchronous and event-driven programming. Some common use cases include:\n",
+    "\n",
+    "1. **User interfaces**: Reactive programming can be used to manage user input  \n",
+    "events, GUI updates, and animations. By treating user actions as asynchronous  \n",
+    "event streams, you can easily compose and transform input events to update UI  \n",
+    "elements or trigger actions in response.\n",
+    "\n",
+    "2. **Websockets and real-time applications**: Reactive programming is  \n",
+    "well-suited for handling real-time data communication over websockets.  \n",
+    "It can be used to manage data streams from multiple sources, perform  \n",
+    "transformations on the data, and respond to events as they occur.\n",
+    "\n",
+    "3. **Data processing pipelines**: RxPY can be used to create data processing  \n",
+    "pipelines where data is ingested from various sources, transformed, and consumed  \n",
+    "by multiple observers. Reactive programming makes it easy to handle complex data  \n",
+    "flows, error handling, and resource management.\n",
+    "\n",
+    "4. **Networking and distributed systems**: Reactive programming can manage  \n",
+    "asynchronous communication between distributed components or microservices.  \n",
+    "It helps to handle backpressure, retries, and timeouts in a clean and  \n",
+    "efficient manner.\n",
+    "\n",
+    "5. **IoT and sensor data**: Reactive programming can be used to process and  \n",
+    "analyze data streams from IoT devices and sensors. It can be used to filter,  \n",
+    "aggregate, and transform data in real-time, and to react to specific events or  \n",
+    "conditions.\n",
+    "\n",
+    "6. **APIs and web services**: Reactive programming can help manage API calls and  \n",
+    "web service requests in a non-blocking manner. You can use it to handle retries,  \n",
+    "timeouts, and error handling when making requests to external services.\n",
+    "\n",
+    "7. **Concurrent and parallel programming**: Reactive programming can simplify  \n",
+    "the process of managing concurrent and parallel tasks, allowing you to  \n",
+    "coordinate and synchronize multiple asynchronous operations by using observable  \n",
+    "sequences.\n",
+    "\n",
+    "These are just a few examples of where reactive programming in Python can be  \n",
+    "beneficial. The key advantage of using reactive programming is its ability to  \n",
+    "handle complex, asynchronous, and event-driven scenarios with ease, leading to  \n",
+    "more readable and maintainable code."
    ]
   },
   {
